--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center px-4 fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">GENES</a>
+    <a class="navbar-brand" href="#">TRiG Academy</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
